--- a/1. Spring Core/1.1 The IoC Container.md
+++ b/1. Spring Core/1.1 The IoC Container.md
@@ -1,11 +1,13 @@
 # [The IoC Container](https://docs.spring.io/spring-framework/reference/core/beans/introduction.html)
 
-1. [Container Overview](https://docs.spring.io/spring-framework/reference/core/beans/basics.html) (Very XML focused)
-2. [Bean Overview](https://docs.spring.io/spring-framework/reference/core/beans/definition.html) (Very XML focused)
+### Table of Content
+
+1. [Container Overview](https://docs.spring.io/spring-framework/reference/core/beans/basics.html)<span style="color:red">*</span>
+2. [Bean Overview](https://docs.spring.io/spring-framework/reference/core/beans/definition.html)<span style="color:red">*</span>
 3. [Dependencies](https://docs.spring.io/spring-framework/reference/core/beans/dependencies.html) 
    1. [Dependency Injection](https://docs.spring.io/spring-framework/reference/core/beans/dependencies/factory-collaborators.html) 
    2. [Lazy-initialized Beans](https://docs.spring.io/spring-framework/reference/core/beans/dependencies/factory-lazy-init.html)
-   3. [Autowiring Collaborators](https://docs.spring.io/spring-framework/reference/core/beans/dependencies/factory-autowire.html) (Very XML focused)
+   3. [Autowiring Collaborators](https://docs.spring.io/spring-framework/reference/core/beans/dependencies/factory-autowire.html)<span style="color:red">*</span>
 4. [Bean Scopes](https://docs.spring.io/spring-framework/reference/core/beans/factory-scopes.html)
 5. [Customizing the Nature of a Bean](https://docs.spring.io/spring-framework/reference/core/beans/factory-nature.html) ([Lifecycle](https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/beans/factory/BeanFactory.html))
 6. [Container Extension Points](https://docs.spring.io/spring-framework/reference/core/beans/factory-extension.html) (BeanPostProcessor vs BeanFactoryPostProcessor)
@@ -25,32 +27,39 @@
     3. [Using the `@Configuration` annotation](https://docs.spring.io/spring-framework/reference/core/beans/java/configuration-annotation.html)
     4. [Composing Java-based Configurations](https://docs.spring.io/spring-framework/reference/core/beans/java/composing-configuration-classes.html)
 11. [Environment Abstraction](https://docs.spring.io/spring-framework/reference/core/beans/environment.html)
-12. [Registering a `LoadTimeWeaver`](https://docs.spring.io/spring-framework/reference/core/beans/context-load-time-weaver.html)
-13. [Additional Capabilities of the `ApplicationContext`](https://docs.spring.io/spring-framework/reference/core/beans/context-introduction.html)
+12. [Additional Capabilities of the `ApplicationContext`](https://docs.spring.io/spring-framework/reference/core/beans/context-introduction.html)
 
-## **IoC Container**
+<span style="color:red">*</span> Very XML focused
 
-### **Core Concepts**
+### Spring Academy
+- [Spring Essentials Overview](https://spring.academy/courses/spring-framework-essentials/lessons/what-is-spring-framework)
+- [Java Configuration](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-java-config-quickstart)
+- [More on Java Configuration](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-more-java-config-external-properties)
+- [Component Scanning](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-component-scanning-configuration)
+- [Inside the Spring Container](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-spring-container-initialization-1)
+
+
+## Core Concepts
 - Inversion of Control (IoC)
 - Dependency Injection (DI)
 - Bean Definitions
 - ApplicationContext vs BeanFactory
 
-### **Bean Scopes**
+### Bean Scopes
 - `singleton`
 - `prototype`
 - `request`
 - `session`
 - `application`
 
-### **Dependency Injection**
+### Dependency Injection
 - Constructor Injection
 - Setter Injection
 - Field Injection
 - Circular Dependencies
 - `@Lazy`
 
-### **Bean Lifecycle**
+### Bean Lifecycle
 - Bean Instantiation
 - Initialization & Destruction
 - `@PostConstruct`
@@ -58,38 +67,38 @@
 - `InitializingBean` & `DisposableBean`
 - Custom Init & Destroy Methods
 
-### **Bean Factory Extensions**
+### Bean Factory Extensions
 - `BeanPostProcessor`
 - `BeanFactoryPostProcessor`
 - `@DependsOn`
 - Bean Creation Order
 
-### **Java-based Configuration**
+### Java-based Configuration
 - `@Configuration`
 - `@Bean`
 - `@Import`
 - `@ImportResource`
 - `AnnotationConfigApplicationContext`
 
-### **Annotation-based Configuration**
+### Annotation-based Configuration
 - `@Component`
 - `@Service`
 - `@Repository`
 - `@Controller`
 - `@ComponentScan`
 
-### **Autowiring & Qualifiers**
+### Autowiring & Qualifiers
 - `@Autowired`
 - `@Primary`
 - `@Qualifier`
 - `@Resource`
 - `@Value("${property.name}")`
 
-### **JSR-330 Annotations (Alternative to Spring Annotations)**
+### JSR-330 Annotations (Alternative to Spring Annotations)
 - `@Inject`
 - `@Named`
 - `@Singleton`
 
-### **Environment & Profiles**
+### Environment & Profiles
 - `@PropertySource`
 - `@Profile`  
