--- a/1. Spring Core/1.1 The IoC Container.md
+++ b/1. Spring Core/1.1 The IoC Container.md
@@ -10,7 +10,7 @@
    3. [Autowiring Collaborators](https://docs.spring.io/spring-framework/reference/core/beans/dependencies/factory-autowire.html)<span style="color:red">*</span>
 4. [Bean Scopes](https://docs.spring.io/spring-framework/reference/core/beans/factory-scopes.html)
 5. [Customizing the Nature of a Bean](https://docs.spring.io/spring-framework/reference/core/beans/factory-nature.html) ([Lifecycle](https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/beans/factory/BeanFactory.html))
-6. [Container Extension Points](https://docs.spring.io/spring-framework/reference/core/beans/factory-extension.html) (BeanPostProcessor vs BeanFactoryPostProcessor)
+6. [Container Extension Points](https://docs.spring.io/spring-framework/reference/core/beans/factory-extension.html)
 7. [Annotation-based Container Configuration](https://docs.spring.io/spring-framework/reference/core/beans/annotation-config.html)
    1. [Using `@Autowired`](https://docs.spring.io/spring-framework/reference/core/beans/annotation-config/autowired.html)
    2. [Fine-tuning Annotation-based Autowiring with `@Primary` or `@Fallback`](https://docs.spring.io/spring-framework/reference/core/beans/annotation-config/autowired-primary.html)
@@ -29,7 +29,7 @@
 11. [Environment Abstraction](https://docs.spring.io/spring-framework/reference/core/beans/environment.html)
 12. [Additional Capabilities of the `ApplicationContext`](https://docs.spring.io/spring-framework/reference/core/beans/context-introduction.html)
 
-<span style="color:red">*</span> Very XML focused
+<span style="color: red">*</span> Very XML focused
 
 ### Spring Academy
 - [Spring Essentials Overview](https://spring.academy/courses/spring-framework-essentials/lessons/what-is-spring-framework)
@@ -38,67 +38,85 @@
 - [Component Scanning](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-component-scanning-configuration)
 - [Inside the Spring Container](https://spring.academy/courses/spring-framework-essentials/lessons/spring-essentials-spring-container-initialization-1)
 
-
 ## Core Concepts
 - Inversion of Control (IoC)
 - Dependency Injection (DI)
-- Bean Definitions
-- ApplicationContext vs BeanFactory
+- Bean Configuration
+- Bean Scopes
+- Bean Lifecycle
+- Properties
+- Profiles & Conditionals
+- JSR alternatives
 
-### Bean Scopes
-- `singleton`
-- `prototype`
-- `request`
-- `session`
-- `application`
+### Inversion of Control
+- Principle where the framework controls the creation and lifecycle of objects (beans).
+- `BeanFactory`: the basic IoC container
+- `ApplicationContext`: Enhanced container built on top of `BeanFactory`
 
 ### Dependency Injection
 - Constructor Injection
 - Setter Injection
 - Field Injection
 - Circular Dependencies
-- `@Lazy`
+- `@Lazy`: Indicates that a bean should be lazily initialized
+
+### Bean Configuration
+
+##### Annotation-based Configuration
+- `@ComponentScan`: enables and configures component scanning
+- `@Component`: marks a class as a Spring-managed bean
+- `@Autowired`: tells spring to resolve and inject a dependency into a constructor, setter or field
+- `@Primary`: marks a bean as the primary choice when multiple candidates of the same type exist
+- `@Qualifier`: specifies which bean to inject using a qualifier
+
+##### Java-based configuration
+- `@Configuration`: indicates that a class declares one or more `@Bean` methods
+- `@Bean`: indicates that a method returns a bean to be registered in the IoC container
+- `@DependsOn`: forces other beans to be initialized
+- `@Import`: imports additional `@Configuration` classes
+- `@ImportResource`: loads bean definitions from a traditional XML configuration file
+
+### Bean Scopes
+- `@Scope`: annotation to configure the scope of a `@Bean`/`@Component`
+- `singleton`: scopes a single bean definition to a single object instance for each IoC container
+- `prototype`: scopes a single bean to any number of object instances
+- `request`: scopes a single bean definition to the lifecycle of a single HTTP request (web-aware only)
+- `session`: scopes a single bean definition to the lifecycle of an HTTP `Session` (web-aware only)
+- `application`: scopes a single bean definition to the lifecycle of a `ServletContext` (web-aware only)
 
 ### Bean Lifecycle
-- Bean Instantiation
-- Initialization & Destruction
-- `@PostConstruct`
-- `@PreDestroy`
-- `InitializingBean` & `DisposableBean`
-- Custom Init & Destroy Methods
 
-### Bean Factory Extensions
-- `BeanPostProcessor`
-- `BeanFactoryPostProcessor`
-- `@DependsOn`
-- Bean Creation Order
+##### Container Lifecycle
+1. Bean **definitions** are loaded (xml, Java-based, Annotation-based)
+2. `BeanFactoryPostProcessor#postProcessBeanFactory` is executed
 
-### Java-based Configuration
-- `@Configuration`
-- `@Bean`
-- `@Import`
-- `@ImportResource`
-- `AnnotationConfigApplicationContext`
+##### Initialization Lifecycle
+1. Constructor Injection (creating the bean)
+2. Setter Injection
+3. Field Injection
+4. `...Aware` methods get executed
+5. `BeanPostProcessor#postProcessBeforeInitialization` is executed
+6. `@PostConstruct` method is executed
+7. `InitializingBean#afterPropertiesSet` is executed
+8. a custom init method definition (`@Bean(initMethod = "...")`)
+9. `BeanPostProcessor#postProcessAfterInitialization` is executed
 
-### Annotation-based Configuration
-- `@Component`
-- `@Service`
-- `@Repository`
-- `@Controller`
-- `@ComponentScan`
+##### Destruction Lifecycle
+1. `DestructionAwareBeanPostProcessor#postProcessBeforeDestruction` is executed
+2. `@PreDestroy` method is executed
+3. `DisposableBean#destroy` is executed
+4. a custom destroy method definition (`@Bean(destroyMethod = "...")`)
 
-### Autowiring & Qualifiers
-- `@Autowired`
-- `@Primary`
-- `@Qualifier`
-- `@Resource`
-- `@Value("${property.name}")`
+### Properties
+- `@Value`: injects a property
+- `@PropertySource`: adds properties from an external property source like `.properties` or `.yml`
 
-### JSR-330 Annotations (Alternative to Spring Annotations)
-- `@Inject`
-- `@Named`
-- `@Singleton`
+### Profiles & Conditionals
+- `@Profile`: marks a bean or `@Configuration` class to only load when one or more named profiles are active
+- `@Conditional`: allows registration of a bean based on a condition
+- `spring.profiles.active`: comma-separated list of profile names to active
 
-### Environment & Profiles
-- `@PropertySource`
-- `@Profile`  
+### JSR alternatives
+- `@Resource`: injects a bean by name
+- `@Inject`: injects a bean by type, equivalent to `@Autowired`
+- `@Named`: declares a bean name
